--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,56 @@ html {
 }
 
 /* メインここまで */
+/* topここから */
+
+.top-img img {
+  width: 100%;
+}
+
+.top-img {
+  width: 478px;
+  height: 322px;
+  overflow: hidden;
+  z-index: 1;
+  margin: 86px auto 0 auto;
+  position: relative;
+  /* 相対位置指定 */
+}
+
+.top-img .caption {
+  font-size: 400%;
+  text-align: center;
+  padding-top: 80px;
+  color: #fff;
+}
+
+.top-img .mask {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* 絶対位置指定 */
+  top: 0;
+  left: 0;
+  opacity: 0;
+  /* マスクを表示しない */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* マスクは半透明 */
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+.top-img:hover .mask {
+  opacity: 1;
+  /* マスクを表示する */
+}
+
+@media only screen and (max-width: 600px) {
+  .top-img {
+    margin: 50px auto 0 auto;
+  }
+}
+
+/* topここまで */
 /* aboutここから */
 
 .profile {
@@ -227,12 +277,58 @@ html {
   .profile {
     width: 180px;
   }
+
   .profile__img {
     width: 100%;
   }
 }
 
 /* aboutここまで */
+/* historyここから */
+
+table {
+  box-sizing: border-box;
+  border-collapse: collapse;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.rekishi {
+  padding-top: 40px;
+}
+
+.origin-list {
+  display: flex;
+}
+
+.origin-list .list {
+  text-align: center;
+  font-size: 13px;
+  padding: 20px;
+}
+
+table th,
+table td {
+  border: 1px solid #999;
+  padding: .5em 1em;
+}
+
+table th {
+  background: #eee;
+}
+
+
+@media screen and (max-width: 900px) {
+  .origin-list {
+    display: block;
+  }
+
+  .origin-list .list {
+    width: 100%;
+  }
+}
+
+/* historyここまで */
 /* フッターここから */
 
 footer {
