--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ table td {
 /* favoriteここから */
 
 .slider img {
-  width: 100%;
+  height: 100%;
   /*スライダー内の画像を横幅100%に*/
   height: auto;
 }
@@ -395,17 +395,11 @@ body {
 fieldset {
   width: 400px;
   margin: 0 auto;
-  margin-top: 113px;
+  margin-top: 100px;
   margin-bottom: 2%;
   transition: opacity 1s;
   -webkit-transition: opacity 1s;
 
-}
-
-@media only screen and (max-width: 600px) {
-  fieldset {
-    margin-top: 80px;
-  }
 }
 
 .certification-title {
