--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,10 @@ input[type="submit"]:hover {
 ::-webkit-input-placeholder {}
 
 /* certificationここまで */
+/* to do listここから */
+
+
+/* to do listここまで */
 /* secretここから */
 
 .secret-img {
